--- a/indexblack.html
+++ b/indexblack.html
@@ -125,7 +125,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <footer class="w3-container w3-black w3-center w3-margin-top">
   <p>Don't hesitate to contact us!</p>
-  <p>Powered by <a href="http://aklabs.xyz" target="_blank">aklabs.xyz</a></p>
+  <p>Powered by <a href="http://aklabs.co" target="_blank">aklabs.co</a></p>
 </footer>
 
 </body>
