--- a/index.html
+++ b/index.html
@@ -124,30 +124,15 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- Grid for pricing tables -->
     <h3 class="w3-padding-16 w3-text-light-grey">Our Prices</h3>
     <div class="w3-row-padding" style="margin:0 -16px">
-      <div class="w3-half w3-margin-bottom">
-        <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
-          <li class="w3-dark-grey w3-xlarge w3-padding-32">Basic</li>
-          <li class="w3-padding-16">Web Design</li>
-          <li class="w3-padding-16">Company or Informational Sites</li>
-          <li class="w3-padding-16">Responsive Design</li>
-          <li class="w3-padding-16">Constant Communication with a client</li>
-          <li class="w3-padding-16">
-            <h2>€ 7</h2>
-            <span class="w3-opacity">per hour</span>
-          </li>
-          <li class="w3-light-grey w3-padding-24">
-            <a href="#contact" class="w3-button w3-white w3-padding-large w3-hover-black">Contact us</a>
-          </li>
-        </ul>
-      </div>
+      
 
       <div class="w3-half">
         <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
-          <li class="w3-dark-grey w3-xlarge w3-padding-32">Pro</li>
+          <li class="w3-dark-grey w3-xlarge w3-padding-32">A.K. Labs</li>
           <li class="w3-padding-16">Web Developing</li>
-          <li class="w3-padding-16">Full Stack complex Web Applications</li>
+          <li class="w3-padding-16">Full Stack Web Applications</li>
           <li class="w3-padding-16">E-commerce</li>
-          <li class="w3-padding-16">Endless Support</li>
+          <li class="w3-padding-16">Responsive Design</li>
           <li class="w3-padding-16">
             <h2>€ 10</h2>
             <span class="w3-opacity">per hour</span>
