--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>A.K. Labs</title>
+<title>Create a website today! | A.K. Labs</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -52,7 +52,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> A.K.</h1>
     <p>Web Designer.</p>
-    <img src="img/background.jpg" alt="boy" class="w3-image" width="992" height="1108">
+    <img src="img/background.jpg" alt="background" class="w3-image" width="992" height="1108">
   </header>
 
   <!-- About Section -->
@@ -138,7 +138,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             <span class="w3-opacity">per hour</span>
           </li>
           <li class="w3-light-grey w3-padding-24">
-            <a href="#contact" class="w3-button w3-white w3-padding-large w3-hover-black">Contact us</a>
+            <a href="#contact" class="w3-button w3-white w3-padding-large w3-hover-black">Start now!</a>
           </li>
         </ul>
       </div>
